--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-flexible-progressbar",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Progress bar with customisable styles",
   "main": "dist/ProgressBar.js",
   "browserslist": "last 2 versions",
@@ -32,31 +32,33 @@
     "react-dom": "^16.4.2"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.1",
-    "@types/react": "^16.4.11",
-    "@types/react-dom": "^16.0.7",
+    "@types/enzyme": "^3.1.14",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
+    "@types/jest": "^23.3.9",
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
     "coveralls": "^3.0.2",
-    "css-loader": "^1.0.0",
-    "enzyme": "^3.4.4",
-    "enzyme-adapter-react-16": "^1.2.0",
+    "css-loader": "^1.0.1",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "enzyme-to-json": "^3.3.4",
-    "gh-pages": "^1.2.0",
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.5.0",
-    "mini-css-extract-plugin": "^0.4.1",
-    "node-sass": "^4.9.3",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "jest": "^23.6.0",
+    "mini-css-extract-plugin": "^0.4.4",
+    "node-sass": "^4.9.4",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.22.1",
-    "ts-jest": "^23.1.4",
-    "ts-loader": "^4.5.0",
+    "style-loader": "^0.23.1",
+    "ts-jest": "^23.10.4",
+    "ts-loader": "^5.3.0",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.0.1",
-    "webpack": "^4.17.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "typescript": "^3.1.6",
+    "webpack": "^4.24.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "jest": {
     "verbose": true,
