--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "deploy": "gh-pages -d examples/dist",
     "publish-demo": "npm run build && npm run deploy",
     "release": "npm run lint && npm run test && npm run tsc && npm run sass",
-    "prepublishOnly": "npm run tsc && npm run sass"
+    "prepublishOnly": "npm run tsc && npm run sass",
+    "postinstall": "npm rebuild node-sass"
   },
   "keywords": [
     "React",
